--- a/index.html
+++ b/index.html
@@ -1,82 +1,308 @@
 <!DOCTYPE html>
-window.fillMemberData = async function(){
-const id = document.getElementById('payID').value.trim();
-if(!id){ document.getElementById('payName').value = ''; document.getElementById('payAddress').value=''; document.getElementById('payPhone').value=''; return; }
-const mSnap = await getDoc(doc(membersCol, id));
-const m = mSnap.exists() ? mSnap.data() : null;
-document.getElementById('payName').value = m ? m.name : '';
-document.getElementById('payAddress').value = m ? m.address : '';
-document.getElementById('payPhone').value = m ? m.phone : '';
-}
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <title>Manajemen Member & Pembayaran</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+  <style>
+    :root { --gap: 10px; }
+    * { box-sizing: border-box; }
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f5f8fa; }
+    h2 { margin: 0 0 16px; }
+    nav { display: flex; flex-wrap: wrap; gap: var(--gap); margin-bottom: 16px; }
+    button { padding: 8px 12px; cursor: pointer; border-radius: 8px; border: 1px solid #aaa; background: #e3f2fd; }
+    button:hover { background: #bbdefb; }
+    .tabs > div { display: none; padding: 12px; border-radius: 8px; background: #fff; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    .tabs > div.active { display: block; }
+    input, select { padding: 6px 8px; border: 1px solid #bbb; border-radius: 6px; }
+    form { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: var(--gap); align-items: end; }
+    form button[type="submit"] { grid-column: 1 / -1; }
+    table { border-collapse: collapse; width: 100%; margin-top: 10px; background: #fff; }
+    th, td { border: 1px solid #aaa; padding: 6px; text-align: left; }
+    th { background: #90caf9; color: #0d47a1; }
+    td.center { text-align: center; }
+    .toolbar { display: flex; gap: var(--gap); flex-wrap: wrap; margin: 8px 0 12px; }
+    .muted { color: #666; font-size: 12px; }
+    input[type="checkbox"] { transform: scale(1.2); accent-color: #0d47a1; }
 
+    @media print {
+      nav, .no-print, form, .muted { display: none !important; }
+      body { margin: 0.5cm; background: #fff; }
+      table { page-break-inside: avoid; }
+      th, td { font-size: 11px; }
+    }
+  </style>
+</head>
+<body>
+  <h2>📋 Sistem Member & Pembayaran</h2>
 
-window.editPayment = async function(id, year, month){
-const key = `${id}_${year}_${month}`;
-const pSnap = await getDoc(doc(paymentsCol, key));
-if(!pSnap.exists()) return;
-const p = pSnap.data();
-document.getElementById('payID').value = p.id;
-document.getElementById('payName').value = p.name;
-document.getElementById('payAddress').value = p.address;
-document.getElementById('payPhone').value = p.phone;
-document.getElementById('payYear').value = p.year;
-document.getElementById('payMonth').value = p.month;
-document.getElementById('payDate').value = p.date;
-showTab('tab-payment');
-}
+  <!-- LOGIN -->
+  <div id="loginBox" class="no-print">
+    <h3>Login</h3>
+    <label>Email <input type="text" id="username"></label>
+    <label>Password <input type="password" id="password"></label>
+    <button onclick="loginFirebase()">Login</button>
+  </div>
 
+  <nav class="no-print" id="menu" style="display:none;">
+    <button onclick="showTab('tab-member')" class="adminOnly">Database Member</button>
+    <button onclick="showTab('tab-payment')" class="adminOnly">Pembayaran</button>
+    <button onclick="showTab('tab-report')">Report Rekap</button>
+    <button onclick="logoutFirebase()">Logout</button>
+  </nav>
 
-window.deletePayment = async function(id, year, month){
-if(!confirm('Hapus pembayaran ini?')) return;
-const key = `${id}_${year}_${month}`;
-await deleteDoc(doc(paymentsCol, key));
-}
+  <div class="tabs">
+    <div id="tab-member" class="adminOnly">
+      <h3>Database Member</h3>
+      <form id="memberForm">
+        <label>ID<br><input type="text" id="memberID" required /></label>
+        <label>Nama<br><input type="text" id="memberName" required /></label>
+        <label>Alamat<br><input type="text" id="memberAddress" required /></label>
+        <label>No HP<br><input type="text" id="memberPhone" required /></label>
+        <button type="submit">Simpan Member</button>
+      </form>
+      <table id="memberTable">
+        <thead><tr><th>ID</th><th>Nama</th><th>Alamat</th><th>No HP</th><th>Aksi</th></tr></thead>
+        <tbody></tbody>
+      </table>
+    </div>
 
+    <div id="tab-payment" class="adminOnly">
+      <h3>Pembayaran</h3>
+      <form id="paymentForm">
+        <label>ID Member<br><input type="text" id="payID" required onblur="fillMemberData()" /></label>
+        <label>Nama<br><input type="text" id="payName" readonly /></label>
+        <label>Alamat<br><input type="text" id="payAddress" readonly /></label>
+        <label>No HP<br><input type="text" id="payPhone" readonly /></label>
+        <label>Tahun<br><input type="number" id="payYear" required /></label>
+        <label>Bulan<br><input type="number" id="payMonth" min="1" max="12" required /></label>
+        <label>Tgl Bayar<br><input type="date" id="payDate" required /></label>
+        <button type="submit">Simpan Pembayaran</button>
+      </form>
+      <table id="paymentTable">
+        <thead><tr><th>ID</th><th>Nama</th><th>Alamat</th><th>No HP</th><th>Tahun</th><th>Bulan</th><th>Tgl Bayar</th><th>Aksi</th></tr></thead>
+        <tbody></tbody>
+      </table>
+    </div>
 
-/*******************************
-* 5) Report
-******************************/
-window.generateReport = async function(){
-const year = Number(document.getElementById('filterYear').value);
-const tbody = document.querySelector('#reportTable tbody');
-tbody.innerHTML = '';
-if(!year){ alert('Masukkan Tahun terlebih dahulu!'); return; }
+    <div id="tab-report">
+      <h3>Report Rekap (Matrix Jan–Des)</h3>
+      <div class="toolbar no-print">
+        <label>Tahun <input type="number" id="filterYear" placeholder="mis. 2025" /></label>
+        <button onclick="generateReport()">Tampilkan</button>
+        <button onclick="exportExcel()">Export Excel</button>
+        <button onclick="window.print()">Print</button>
+      </div>
+      <table id="reportTable">
+        <thead>
+          <tr>
+            <th>ID</th><th>Nama</th><th>Alamat</th><th>No HP</th><th>Tahun</th>
+            <th>Jan</th><th>Feb</th><th>Mar</th><th>Apr</th><th>Mei</th><th>Jun</th>
+            <th>Jul</th><th>Agu</th><th>Sep</th><th>Okt</th><th>Nov</th><th>Des</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+      <div class="muted">Keterangan: ✅ = Lunas, – = Belum Bayar</div>
+    </div>
+  </div>
 
+<!-- Firebase -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+  import { getFirestore, collection, getDocs, setDoc, doc, deleteDoc } 
+    from "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js";
+  import { getAuth, signInWithEmailAndPassword, signOut } 
+    from "https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js";
 
-// ambil semua member
-const membersSnap = await getDocs(query(membersCol, orderBy('id')));
-const membersData = membersSnap.docs.map(d => d.data());
+  // Konfigurasi Firebase project Anda
+  const firebaseConfig = {
+    apiKey: "AIzaSyC5KJbCt_oc7Lc991ZQehtrZKu0r8ocvE8",
+    authDomain: "coba-8f9af.firebaseapp.com",
+    projectId: "coba-8f9af",
+    storageBucket: "coba-8f9af.appspot.com",
+    messagingSenderId: "375276847460",
+    appId: "1:375276847460:web:f1fd0de167aa1612cc7a71",
+    measurementId: "G-97Y1D758BR"
+  };
 
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  const auth = getAuth(app);
 
-// ambil pembayaran tahun tsb
-const paysSnap = await getDocs(query(paymentsCol, where('year','==', year)));
-const paidSet = new Set(paysSnap.docs.map(d => {
-const p = d.data();
-return `${p.id}|${p.year}|${p.month}`;
-}));
+  let members = [];
+  let payments = [];
+  let isAdmin = false;
 
+  // ================= LOGIN =================
+  async function loginFirebase(){
+    const email = document.getElementById("username").value.trim();
+    const pass = document.getElementById("password").value.trim();
+    try {
+      const userCredential = await signInWithEmailAndPassword(auth, email, pass);
+      alert("Login Firebase berhasil sebagai Admin");
+      isAdmin = true;
+      document.getElementById("loginBox").style.display = "none";
+      document.getElementById("menu").style.display = "flex";
+      applyRole();
+      showTab("tab-report");
+      loadMembers();
+      loadPayments();
+    } catch (e) {
+      alert("Login gagal: " + e.message);
+    }
+  }
+  window.loginFirebase = loginFirebase;
 
-for(const m of membersData){
-let html = `<td>${m.id}</td><td>${m.name}</td><td>${m.address}</td><td>${m.phone}</td><td>${year}</td>`;
-for(let i=1;i<=12;i++){
-const checked = paidSet.has(`${m.id}|${year}|${i}`) ? 'checked' : '';
-html += `<td class='center'><input type='checkbox' ${checked} disabled></td>`;
-}
-const tr = document.createElement('tr');
-tr.innerHTML = html;
-tbody.appendChild(tr);
-}
-}
+  async function logoutFirebase(){
+    await signOut(auth);
+    isAdmin = false;
+    document.getElementById("menu").style.display = "none";
+    document.getElementById("loginBox").style.display = "block";
+    showTab("tab-report");
+  }
+  window.logoutFirebase = logoutFirebase;
 
+  function applyRole(){
+    document.querySelectorAll(".adminOnly").forEach(el=>{
+      el.style.display = isAdmin ? "" : "none";
+    });
+  }
 
-window.exportExcel = function(){
-const wb = XLSX.utils.table_to_book(document.getElementById('reportTable'), {sheet:'Report'});
-XLSX.writeFile(wb, 'Report.xlsx');
-}
+  function showTab(id){
+    document.querySelectorAll(".tabs > div").forEach(el => el.classList.remove("active"));
+    document.getElementById(id).classList.add("active");
+  }
 
+  // ================= FIRESTORE CRUD =================
+  async function loadMembers(){
+    const querySnapshot = await getDocs(collection(db, "members"));
+    members = querySnapshot.docs.map(doc => doc.data());
+    renderMembers();
+  }
 
-// Default tab
-showTab('tab-report');
+  async function saveMember(member){
+    await setDoc(doc(db, "members", member.id), member);
+    await loadMembers();
+  }
+
+  async function deleteMember(i){
+    const m = members[i];
+    await deleteDoc(doc(db, "members", m.id));
+    await loadMembers();
+  }
+  window.deleteMember = deleteMember;
+
+  async function loadPayments(){
+    const querySnapshot = await getDocs(collection(db, "payments"));
+    payments = querySnapshot.docs.map(doc => doc.data());
+    renderPayments();
+  }
+
+  async function savePayment(payment){
+    const key = `${payment.id}_${payment.year}_${payment.month}`;
+    await setDoc(doc(db, "payments", key), payment);
+    await loadPayments();
+  }
+
+  async function deletePaymentById(id,year,month){
+    const key = `${id}_${year}_${month}`;
+    await deleteDoc(doc(db, "payments", key));
+    await loadPayments();
+  }
+  window.deletePaymentById = deletePaymentById;
+
+  // ================= RENDER =================
+  function renderMembers(){
+    const tbody = document.querySelector("#memberTable tbody");
+    tbody.innerHTML = "";
+    members.forEach((m,i)=>{
+      const tr = document.createElement("tr");
+      tr.innerHTML = `<td>${m.id}</td><td>${m.name}</td><td>${m.address}</td><td>${m.phone}</td>
+        <td><button onclick="editMember(${i})">Edit</button>
+        <button onclick="deleteMember(${i})">Hapus</button></td>`;
+      tbody.appendChild(tr);
+    });
+  }
+
+  function renderPayments(){
+    const tbody=document.querySelector("#paymentTable tbody");
+    tbody.innerHTML="";
+    payments.forEach(p=>{
+      const tr=document.createElement("tr");
+      tr.innerHTML=`<td>${p.id}</td><td>${p.name}</td><td>${p.address}</td><td>${p.phone}</td>
+      <td>${p.year}</td><td>${p.month}</td><td>${p.date}</td>
+      <td><button onclick="editPayment('${p.id}',${p.year},${p.month})">Edit</button>
+      <button onclick="deletePaymentById('${p.id}',${p.year},${p.month})">Hapus</button></td>`;
+      tbody.appendChild(tr);
+    });
+  }
+
+  // ================= FORM HANDLER =================
+  document.getElementById("memberForm").addEventListener("submit", async function(e){
+    e.preventDefault();
+    const data={
+      id: memberID.value.trim(),
+      name: memberName.value,
+      address: memberAddress.value,
+      phone: memberPhone.value
+    };
+    await saveMember(data);
+    this.reset();
+  });
+
+  function editMember(i){
+    const m=members[i];
+    memberID.value=m.id; memberName.value=m.name; memberAddress.value=m.address; memberPhone.value=m.phone;
+    showTab('tab-member');
+  }
+  window.editMember = editMember;
+
+  document.getElementById("paymentForm").addEventListener("submit", async function(e){
+    e.preventDefault();
+    const id=payID.value.trim();
+    const m=members.find(x=>x.id===id);
+    if(!m){alert("ID tidak ada"); return;}
+    const data={id,name:m.name,address:m.address,phone:m.phone,year:payYear.value,month:payMonth.value,date:payDate.value};
+    await savePayment(data);
+    this.reset();
+  });
+
+  function fillMemberData(){
+    const m=members.find(x=>x.id===payID.value.trim());
+    payName.value=m?m.name:""; payAddress.value=m?m.address:""; payPhone.value=m?m.phone:"";
+  }
+  window.fillMemberData = fillMemberData;
+
+  function editPayment(id,year,month){
+    const p=payments.find(x=>x.id===id && x.year==year && x.month==month);
+    if(!p) return;
+    payID.value=p.id; payName.value=p.name; payAddress.value=p.address; payPhone.value=p.phone;
+    payYear.value=p.year; payMonth.value=p.month; payDate.value=p.date;
+    showTab('tab-payment');
+  }
+  window.editPayment = editPayment;
+
+  // ================= REPORT =================
+  function generateReport(){
+    const year=Number(filterYear.value); const tbody=document.querySelector("#reportTable tbody"); tbody.innerHTML="";
+    if(!year){ alert("Masukkan Tahun terlebih dahulu!"); return; }
+    const paid=new Set(payments.filter(p=>Number(p.year)===year).map(p=>`${p.id}|${p.year}|${p.month}`));
+    members.forEach(m=>{
+      let html=`<td>${m.id}</td><td>${m.name}</td><td>${m.address}</td><td>${m.phone}</td><td>${year}</td>`;
+      for(let i=1;i<=12;i++){
+        const checked=paid.has(`${m.id}|${year}|${i}`)?"checked":"";
+        html+=`<td class='center'><input type='checkbox' ${checked} disabled></td>`;
+      }
+      const tr=document.createElement("tr"); tr.innerHTML=html; tbody.appendChild(tr);
+    });
+  }
+  window.generateReport = generateReport;
+
+  function exportExcel(){ const wb=XLSX.utils.table_to_book(reportTable,{sheet:"Report"}); XLSX.writeFile(wb,"Report.xlsx"); }
+  window.exportExcel = exportExcel;
+
 </script>
 </body>
 </html>
